--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,11 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-      
         {
             "name": "weather_app",
             "request": "launch",
             "type": "dart",
-            "program": "lib/views/pages/main.dart"
+            "program": "lib/main.dart"
         },
         {
             "name": "weather_app (profile mode)",
